add script to generate swagger.json on package.json and update README.pot.md

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
+    "docs:generate": "sleep 5 && curl -o swagger.json http://localhost:3000/api-json",
+    "docs:stop": "killall node",
+    "docs": "concurrently \"npm run start\" \"npm run docs:generate\" && npm run docs:stop",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -50,6 +53,7 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "concurrently": "^8.2.2",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
