--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     environment:
        POSTGRES_PASSWORD: pass123
   
-  test-db:
-    image: postgres
-    restart: always
-    ports:
-      - "5433:5432"
-    environment:
-      POSTGRES_PASSWORD: pass123
+  # test-db:
+  #   image: postgres
+  #   restart: always
+  #   ports:
+  #     - "5433:5432"
+  #   environment:
+  #     POSTGRES_PASSWORD: pass123
